--- a/pages/p2/954902.md
+++ b/pages/p2/954902.md
@@ -1,4 +1,4 @@
-### 高危职位重庆公安局长接任人选传出(图)
+### 【中国时局】习为中共掘墓 党内这样看他(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="现任陕西副省长、公安厅长胡明朗" src="https://img3.secretchina.com/pic/2020/9-10/p2773521a534367470-ss.jpg" style="height:338px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="蔡霞说，一位党内学者表示，习近平“缺乏基本判断力，说话没有逻辑。”" src="https://img3.secretchina.com/pic/2020/2-4/p2619582a280246250-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   现任陕西副省长、公安厅长胡明朗（图片来源：网络）
+   蔡霞说，一位党内学者表示，习近平“缺乏基本判断力，说话没有逻辑。”（图片来源: Fred Dufour - Pool/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,66 +21,77 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  秦鹏快评：钟南山到底是功臣还是罪人？李文亮缺席表彰大会，网民不满！](http://141.164.51.119:10000/videos/news/qp02.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月11日讯】（看中国记者林中宇综合报导）
+  【看中国2020年12月7日讯】
   <strong>
-   重庆
-  </strong>
-  市副市长、公安局局长
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/邓恢林" target="_blank">
-    邓恢林
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
    </span>
   </strong>
-  今年6月落马，已被撤职。有消息指，陕西副省长、公安厅长
+  为中共掘墓，党内这样看他；官场黑色星期五；高层
   <strong>
-   胡明朗
+   人事
   </strong>
-  ，将担任重庆市副市长、公安局局长。
+  大动；习要备战，忧党员又忧枪杆子；
+  <strong>
+   翟东升
+  </strong>
+  泄中共在美“上边有人”；副手举报
+  <strong>
+   胡锡进
+  </strong>
+  与女下属有私生子。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  亲共港媒《星岛日报》10日报导披露上述消息。
+  【
+  <strong>
+   习近平为中共掘墓，党内这样看他
+  </strong>
+  】
  </p>
  <p>
-  公开资料显示，53岁的
-  <span href="https://zh.wikipedia.org/wiki/%E8%83%A1%E6%98%8E%E6%9C%97" target="_blank">
-   胡明朗
+  因批评
+  <span href="https://zh.wikipedia.org/wiki/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
+   习近平
   </span>
-  ，在广西公安系统工作30年，曾任柳州市公安局长、南宁市公安局局长，后来进京担任公安部禁毒局局长、治安管理局局长，2017年空降陕西担任公安厅长。
+  及中共体制而被开除党籍的前中共中央党校教授蔡霞首次撰写长文，自我剖析她与中共黑帮政党决裂的政治觉醒之路。她还在文章中披露，中共党内是如何评价习近平的。
  </p>
  <p>
-  港媒称，由于
-  <span href="https://www.secretchina.com/news/gb/tag/重庆" target="_blank">
-   重庆
+  文章中说，一位在党校担任领导职务的著名教授，直言习近平“知识不够”；另一位党内学者则表示，习近平“缺乏基本判断力，说话没有逻辑。”
+ </p>
+ <p>
+  习近平曾警告中共记取前苏联教训，声称“竟无一人是男儿”。但美国华裔政府学教授裴敏欣认为，习近平可能并未真正吸取苏共崩溃的教训，他的新斯大林主义可能使他成为中共一党专制的掘墓人。
+ </p>
+ <p>
+  相关报导：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/2020/12/06/954812.html" target="_blank">
+   学者分析习近平加速终结中共的三个理由
   </span>
-  是直辖市，胡明朗转任山城被视为重用。
- </p>
- <p>
-  不过，邓恢林是第四位被查的重庆市公安局局长，由此也令该职位的高危再次引发关注。
- </p>
- <p>
-  重庆市自转为直辖市以来至今近23年间，重庆经历了六任书记：黄镇东、汪洋、薄熙来、张德江、孙政才、陈敏尔。这当中薄和孙均已落马。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +106,9 @@
   </div>
  </center>
  <p>
-  与之相对应的是，重庆也先后经历了六任公安局长。
+  <span href="https://www.secretchina.com/news/gb/2020/12/05/954811.html" target="_blank">
+   蔡霞首发长文：披露中共党内如何评价习近平
+  </span>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,7 +123,11 @@
   </div>
  </center>
  <p>
-  陈邦国（1997-2001）
+  【
+  <strong>
+   官场黑色星期五
+  </strong>
+  】
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,7 +142,7 @@
   </div>
  </center>
  <p>
-  朱明国（2001-2006）
+  辽宁省重点国企华晨汽车集团因为债务爆雷宣布破产重整半个月后，12月4日（周五），执掌集团十余年的前董事长祁玉民被调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -140,7 +157,7 @@
   </div>
  </center>
  <p>
-  刘光磊（2006-2009）
+  同在4日这天，中共重庆证监局原党委书记、局长毛毕华被通报受查。据陆媒盘点，除了毛毕华，11月以来至少还有8名金融官员“出事”。当中包括银保监局官员，以及银行董事长、行长、副行长等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,7 +172,7 @@
   </div>
  </center>
  <p>
-  王立军（2009-2012）
+  12月4日傍晚，内蒙古纪委监委连续公布了5名在任或退休官员被查，其中3人已退休，2人仕途与“煤”相关。这是近期内蒙古第3次批量“处理”落马厅官。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,7 +187,15 @@
   </div>
  </center>
  <p>
-  何挺（2012-2017）
+  【
+  <strong>
+   高层
+   <span href="https://www.secretchina.com/news/gb/tag/人事" target="_blank">
+    人事
+   </span>
+   大动
+  </strong>
+  】
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -185,7 +210,7 @@
   </div>
  </center>
  <p>
-  邓恢林（2017年至今）
+  日前中共官方公布福建、海南和四川等地的人事调动，其中四川省长尹力调升福建省委书记。有评论指，福建省已成为中共的“政治高地”，近年除了本土官员高升外，还有空降到福建的官员再调任中央获重用。福建历来也是中南海各派势力交错之地。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -200,7 +225,11 @@
   </div>
  </center>
  <p>
-  六任局长中，只有第一任和第三任是平安着陆。
+  另外，黑龙江省长王文涛进京任职商务部党组书记。曾有上海访民透露，王文涛是
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  妻王冶坪的侄子，在出任黄浦区区长及区委书记时，依靠拆迁，大量偷盗土地出让金及非法套取国家大量资金。2011年，有访民曾向进驻上海的中纪委第四巡视组举报王文涛的贪腐行为，但王文涛照样升迁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -215,7 +244,7 @@
   </div>
  </center>
  <p>
-  平安落地的两位，都以重庆政协副主席的身份作为仕途终点。陈是第一和第二届政协副主席，刘是第四届也是本届政协副主席。
+  中共中央和国家机关工委分管日常工作的副书记孟祥锋，已出任中央办公厅分管日常工作的副主任。港媒称其今后有望成为中南海大管家。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -230,7 +259,10 @@
   </div>
  </center>
  <p>
-  六个局长都官至副省级，其中朱明国更是在调任广东后晋升正省级的省政协主席。
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  科学院官网日前更新“院领导集体”一栏显示，侯建国已接替白春礼出任中科院院长、党组书记，阴和俊则出任中科院副院长、党组副书记。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -245,7 +277,7 @@
   </div>
  </center>
  <p>
-  前三位陈、朱、刘，都是以市委常委、政法委书记的身份兼任公安局长，王、何则是以副市长身份兼任公安局长，邓恢林则是政法委书记、副市长兼公安局长。
+  习近平最近几轮密集的高层人事调整，特别是地方大员的变动，有内外两个大背景。对内是因应中共二十大前，习近平为保权延任的自己人卡位布局。对外就是习自己所说的：当前中国安全环境发生新变化。也就是在中美关系恶化、世界围堵中共以及两岸紧张情势下。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +292,56 @@
   </div>
  </center>
  <p>
-  邓恢林的前任为何挺，于2012年3月出任公安局长，2017年6月被免，后被查。何的前任系王立军，因徇私枉法、叛逃、滥用职权、受贿案被判刑15年。
+  【
+  <strong>
+   习要备战，忧党员又忧枪杆子
+  </strong>
+  】
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在中美关系恶化、世界围堵中共以及两岸紧张下，习近平近期多次在会中要求军队备战。中共政治局11月30日审议军队政治工作、统战工作、党员权利保障等条例，重申“党的领导”，要求聚焦备战打仗。外界认为，这或是习近平在中共内外交困下的孤注一掷，已做最坏打算。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国国内反习反共暗涌不断，在这情势下，习近平能否握紧“枪杆子”，令人关注。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对于中共政治局审议中共党员权利保障条例，并称要引导党员与一切可能动摇党根基的行为斗争。外界认为在中共内斗公开化，全党离心离德，习近平强化各类党员禁令之际，这个条例出台令人称奇。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -279,24 +360,14 @@
   </ins>
  </center>
  <p>
-  曾任重庆市委常委兼公安局长的朱明国，2006年，改任中共广东省委常委兼省纪委书记。后历任中共广东省委副书记并兼任广东省社会工作委员会主任，中共广东省委副书记并兼任省委政法委员会书记，2014年11月28日在广东省政协主席任上落马。2016年11月11日以犯受贿罪，判处死刑，缓期二年执行。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+  【
   <strong>
-   整肃潮再掀 政法系难平安
+   <span href="https://www.secretchina.com/news/gb/tag/翟东升" target="_blank">
+    翟东升
+   </span>
+   泄中共在美“上边有人”
   </strong>
+  】
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -311,11 +382,55 @@
   </div>
  </center>
  <p>
-  中共中央政法委秘书长陈一新在7月8日宣布，要在全国政法队伍中展开一次“刮骨疗毒式的自我革命”、“延安整风”。陈一新被公认是
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  近日，中国人民大学国际关系学院副院长翟东升公开场合炫耀如何渗透美国精英阶层，并夸口中共在美国高层是“上面有人”。另外，翟东升本人身份比较特殊，他除了负责人大国际关系研究，还是习近平的智囊团成员之一，专门负责对美欧的外交政策制定。所以，翟东升此话一出必然引得舆论关注。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2020年美国大选尚未尘埃落定，但拜登却已开始建构自己的执政团队，令人惊讶的是，其“新内阁要员”几乎清一色来自WestExec公司，而这些人又都是奥巴马时期的高官，并与中共往来密切。最诡异的是，相关消息传出后，WestExec公司悄悄移除了跟中共的“业务联系”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国当局日前举行“读懂中国”跨国会议，并邀请西方“重要人士”为其站台背书。国家脉动（National Pulse）网站近日报道，CNN的主播扎卡利亚（Fareed Zakaria）和拜登顾问萨默斯（Lawrence Summers）都参加了这次会议。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  相关报导：
+  <span href="https://www.secretchina.com/news/gb/2020/12/05/954785.html" target="_blank">
+   送北京户口四合院 习近平智囊曝渗透美国高层细节(视频)
   </span>
-  安插在政法委的亲信。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -330,7 +445,15 @@
   </div>
  </center>
  <p>
-  中共政法系统涵盖了公安、法院、检查、国安等系统，因为负责对内维稳，常被称为中共的“刀把子”。
+  【
+  <strong>
+   副手举报
+   <span href="https://www.secretchina.com/news/gb/tag/胡锡进" target="_blank">
+    胡锡进
+   </span>
+   与女下属有私生子
+  </strong>
+  】
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -345,7 +468,7 @@
   </div>
  </center>
  <p>
-  从4月到8月，政法系统掀起新一轮清洗风暴。大批政法官员或有政法背景的官员被查处。其中最有影响的3名高官分别是：中共公安部副部长孙力军、重庆市副市长兼公安局长邓恢林、上海市副市长兼公安局长龚道安。
+  被网民戏称“胡叼盘”的中共官媒《环球时报》总编辑胡锡进，遭同报副总编段静涛实名举报到中纪委，指其与两名女下属有婚外情，更生下两名私生子，随后胡锡进回应“辟谣”，指已将事件交由人民日报社调查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -360,11 +483,7 @@
   </div>
  </center>
  <p>
-  这三人都是前中共政治局委员、中央政法委书记孟建柱提拔重用。其中邓恢林曾任中央政法委办公室主任，被视为时任中央政法委书记孟建柱大管家。而孟建柱一路是由
-  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
-   江泽民
-  </span>
-  和曾庆红提拔重用。
+  胡锡进遭下属举报他与2名女员工发生不伦恋，且已有私生子，相关消息在民间炸锅。令人疑惑的是，向来管控言论的大陆互联网，竟未对这此事进行封杀。有评论人士推测，背后或存在两大势力角逐。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -379,22 +498,7 @@
   </div>
  </center>
  <p>
-  台湾国立政治大学国际关系研究中心主任寇健文接受中央社采访时解读称，习近平是为了要确保在2022年中共二十大前，掌握又称“刀把子”的政法系统，“清一波、空出位置”，让后来升官的人因得益于习近平而重塑依附关系。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不过，由于中共内忧外患加剧，其政权能否有二十大还是个未知数。
+  目前，民间议论纷纷，但却始终未见官方作出任何说明。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -426,7 +530,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -458,13 +562,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945729.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945729.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/945729.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/11/945729.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954902.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954902.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954902.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954902.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/945729.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954902.md' width='0px' height='0px'/>
