--- a/pages/p9/955185.md
+++ b/pages/p9/955185.md
@@ -1,4 +1,4 @@
-### 加拿大总理：第2波疫情已来比第1波严重(图)
+### 中1亿英镑乐透捐出一半 自己仍开二手车(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="2020年8月18日，加拿大总理特鲁多在渥太华举行的新闻发布会上讲话。" src="https://img3.secretchina.com/pic/2020/9-24/p2782481a945165700-ss.jpg" style="height:400px; width:600px"/>
+  <img alt="2019年1月4日，康诺利在贝尔法斯特附近的Culloden Hotel举行的拍照留念中亮相。" src="https://img3.secretchina.com/pic/2020/12-9/p2834571a915129787-ss.jpg" style="height:390px; width:600px"/>
   <br>
-   2020年8月18日，加拿大总理特鲁多在渥太华举行的新闻发布会上讲话。（图片来源：DAVE CHAN/AFP via Getty Images）
+   2019年1月4日，康诺利在贝尔法斯特附近的Culloden Hotel举行的拍照留念中亮相。（图片来源：PAUL FAITH/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,53 +21,39 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月24日讯】（法广RFI）
+  【看中国2020年12月9日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
-    加拿大
+   英国
+  </strong>
+  一名女子中了高达1.15亿英镑（约新台币43亿元）的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/乐透" target="_blank">
+    乐透
    </span>
+   头奖
   </strong>
-  总理杜鲁道（Justin Trudeau）今天揭露目标宏大的计划，盼解决疫情暴露的社会不平等、创造100万个工作，同时也延长紧急措施，来因应更为严重的
-  <strong>
-   第2波疫情
-  </strong>
-  。
+  ，不过善良的她并没有独享这笔奖金，而是选择与他人分享。截至目前她已大方捐出超过奖金一半的6000万英镑（约新台币22亿元）。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  杜鲁道在对全国发表的电视演说表示：“
-  <span href="https://zh.wikipedia.org/zh-hans/%E5%8A%A0%E6%8B%BF%E5%A4%A7" target="_blank">
-   加拿大
-  </span>
-  正站在十字路口上。”
+  综合外媒报导，来自北爱尔兰的康诺利（Frances Connolly）去年中大奖，最近她公开向媒体透露如何运用这笔奖金，她说，确认自己中奖之后的短短数小时内，她与丈夫派翠克（Patrick）就列出了他们想要帮助的50人名单，这些人赚钱比较不容易，当中包括孩子的保母和帮助过他们的亲友们。
  </p>
  <p>
-  杜鲁道表示，
-  <span href="https://www.secretchina.com/news/gb/tag/第2波" target="_blank">
-   第2波
-  </span>
-  疫情会比第1波严重。他说，加国昨天新增1000多例确诊，对照3月13日开始封城时单日新增仅47例：“我们即将接近秋季，可能会比春天时还严重。”
+  除了帮助身边亲友，他们也热衷帮助陌生人。耶诞节到来，他们送礼给住院的病患，赠送平板电脑给养老院的老人家们，好让他们能够与家人视讯通话，他们甚至还替一位年轻的难民男孩负担教育支出，让他能继续上中学。
  </p>
  <p>
-  “在我们前4大省，第2波
-  <span href="https://www.secretchina.com/news/gb/tag/疫情" target="_blank">
-   疫情
-  </span>
-  不是刚冒出头，而是已经开始。”“我们不可能在感恩节当天（10月12日）团聚了，但耶诞节或许有机会。”
- </p>
- <p>
-  “我们可以让第2波疫情获得控制，我知道我们可以，因为我们先前已经做过一次。”
+  虽然赢得了巨额奖金，夫妻俩还是过著相当节俭的生活，甚至没有辞去原本的工作，只买了一栋新的平房以及一台二手车。康诺利说，比起购买华贵的珠宝，能够改善他人的生活带给她更多快乐，她打从一开始就认定自己不会成为拥有私人飞机的富豪。
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -87,20 +73,8 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
-  </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
   </center>
   <center>
    <div>
@@ -119,13 +93,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947133.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947133.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/947133.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/24/947133.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955185.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955185.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955185.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/09/955185.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/947133.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/955185.md' width='0px' height='0px'/>
