--- a/pages/p9/955192.md
+++ b/pages/p9/955192.md
@@ -1,4 +1,4 @@
-### 习近平南下港交所停交易 忧北上资金砸盘？(组图)
+### 澳洲著名报纸终止为中国宣传的插页广告(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="习近平 港交所 北上资金" src="https://img3.secretchina.com/pic/2020/9-24/p2782193a911744784-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="一家咖啡店的桌子上放着《悉尼晨锋报》、《时代报》" src="https://img3.secretchina.com/pic/2020/12-9/p2834631a537518066-ss.jpg" style="height:433px; width:600px"/>
   <br>
-   10月13日，港交所发布信息，全天停止交易。（图片来源：Adobe Stock）
+   一家咖啡店的桌子上放着《悉尼晨锋报》、《时代报》（图片来源：WILLIAM WEST/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,124 +21,68 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月13日讯】（看中国记者文龙综合报导）中国国家主席
+  【看中国2020年12月9日讯】（看中国记者路克编译）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/澳大利亚" target="_blank">
+    澳大利亚
    </span>
   </strong>
-  赴广东出席深圳经济特区正式成立40周年活动，10月13日，
+  著名
   <strong>
-   港交所
+   报纸
   </strong>
-  发布信息，全天停止交易，民评是怕
+  《悉尼晨锋报》的母公司Nine Entertainment已经悄悄停止了每月一次的给中共提供宣传的“
   <strong>
-   北上资金
+   插页
   </strong>
-  到大陆股市砸盘。
+  ”
+  <strong>
+   广告
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络传出的视频显示，
-  <span href="https://zh.wikipedia.org/zh-cn/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
+  由中共官方英文喉舌《中国日报》制作的长达八页的“中国观察”报道，已在《悉尼晨锋报》、《时代报》和《澳大利亚金融评论》上每月发行数年。这是先前这几份
+  <span href="https://www.secretchina.com/news/gb/tag/报纸" target="_blank">
+   报纸
   </span>
-  12日下午到了广东潮州，在步行街与“民众”会面，视频所见，所有人都没有戴口罩。陪同习近平的有副总理刘鹤、中央办公厅主任丁薛祥、广东省长马兴瑞。不过，所谓的民众被传都是“临时演员”。
+  的所有者Fairfax Media在2016年与《中国日报》达成的一项交易的一部分。
  </p>
  <p>
-  据香港《苹果日报》报导，中共中央办公厅主任丁薛祥等有关负责人，此前提前南下广东，为习近平的南下做准备。
- </p>
- <p>
-  深圳和广东多地如临大敌，不断提升保安，深圳地标莲花山从10月11日起封闭，深圳、东莞、中山及汕头等多地警方下达“禁飞令”，许多无人机玩家收到通知，自10月11日零时至10月17日深夜，除非获准，否则全市禁飞无人机等航空器。
- </p>
- <p>
-  10月13日，香港交易及结算所有限公司（香港交易所）宣布：由于八号台风信号的发布，今天在证券和衍生产品市场上的交易时段（包括盘后期货交易）被取消。将不提供证券清算和结算服务，没有股票连接北向交易。
- </p>
- <p>
-  中国大陆投资者评论称：“趋于两种原因，
-  <span href="https://zh.wikipedia.org/zh-cn/%E6%B8%AF%E4%BA%A4%E6%89%80" target="_blank">
-   港交所
+  《卫报》周三首次报道说，Nine Entertainment已于六个月前决定不续签这份有利可图的合同。此前，全球媒体组织在COVID-19大流行中做出了类似决定，其中包括今年四月份，英国《每日电讯报》做出终止与《中国日报》
+  <span href="https://www.secretchina.com/news/gb/tag/插页" target="_blank">
+   插页
   </span>
-  一定是人工露天交易所，担心台风天气把钱吹跑。其次，今明两天朝廷在深圳开会，研究资本市场相关试点工作，老A已经弱不禁风，担心贵所沪港深港跑过来砸盘？”
+  广告合作的决定。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="习近平 港交所 北上资金" src="https://img3.secretchina.com/pic/2020/10-13/p2795891a547189037-ss.jpg" style="height:205px; width:600px"/>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  中国大陆投资者评论港交所停止交易。（图片来源：网易评论）
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  独立智库天钧政经指出，中共权贵们利用各种方式、闪转腾挪把资金转移到海外，通过离岸公司转了几次手洗白。然后，摇身一变成为外资，大摇大摆再次从香港进入
+  news.com.au试图与Nine Entertainment联系，但其发言人拒绝置评。
+ </p>
+ <p>
+  Nine Entertainment的政治编辑克里斯・乌尔曼（Chris Uhlmann）公开批评自己的老板经营插页，并在2月发布了一张推文，标题是：“当《
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  大陆搅动经济获利。尤其通过香港与大陆股市互联互通计划的外资，就有权贵们的资金在里面。
+  日报》每月的插页出现在《悉尼晨锋报》上时，总是令人很兴奋。正如其恰如其分的标注“这就是你需要知道的一切”……
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  因为中共权贵在内幕信息获取等方面比普通投资者更有优势，股指涨跌与
-  <span href="https://www.secretchina.com/news/gb/tag/北上资金" target="_blank">
-   北上资金
+  乌尔曼当时对《澳大利亚人报》表示，《中国日报》的插页
+  <span href="https://www.secretchina.com/news/gb/tag/广告" target="_blank">
+   广告
   </span>
-  的净流入和净流出息息相关，市场表现尽在北上资金掌控当中。从历史的交易情况来看，北上资金对于宏观层面的信息把握的相当精准。
+  “极度令人不安”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,7 +97,52 @@
   </div>
  </center>
  <p>
-  中国官媒今年三月曾报道称，北上资金一直是市场关注的重要风向标，股市上涨离不开北上资金的“发动机”，而北上资金中又免不了“鱼龙混杂”，加了杠杆回到大陆股市。
+  “自从（2016年）做出决定将《中国日报》插入《悉尼晨锋报》的那一刻起，我就明确表示，澳大利亚媒体组织竟然支持共产党的宣传，这是非常令人不安的事态发展。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “我说过，在我加入Nine Entertainment之前，我并没有改变看法。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “中国观察”的推广极大地提升了中国当局的影响。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  今年2月，一个标题为“中国遏制病毒的斗争赢得了广泛赞誉”的故事赞扬了中国当局对COVID-19的回应。文章称：“中国采取了最全面、最严格的遏制和缓解措施，其中许多措施远远超出了《国际卫生条例》的要求。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,9 +161,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   北上资金
-  </strong>
+  据《卫报》报道，当费尔法克斯媒体（Fairfax Media）在2016年开始推广《中国日报》的宣传活动时，该公司称此举是合理的商业印刷安排，以此来证明这一举动是合理的，并指出世界各地的其他报纸也进行了宣传，包括美国的《华盛顿邮报》和法国《费加罗报》。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -189,7 +176,7 @@
   </div>
  </center>
  <p>
-  在中国股市中，一般“北”指的是中国大陆沪深两市的股票，“南”指的是指香港股票，因此，北上资金就是指从香港股票中流入大陆股市的资金，同时大陆的股票也有流入香港股市的资金，而这个资金被称为南下资金。
+  当时发布的免责声明称：“这份由中国《中国日报》撰写的补编不涉及《悉尼晨锋报》的新闻或编辑部门”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +191,7 @@
   </div>
  </center>
  <p>
-  和北上资金对应的是南下资金，这里的南北不是平常所说的中国南方和北方，北上资金是进入A股市场中的香港资金以及国际资本，南下资金则是进入港股操作的中国大陆的资金。这两种资金名称是在中国开通沪港通以及深港通开通互通互联之后形成的。
+  在堪培拉与北京之间的关系跌至新低之际，羊肉成为中国所最新针对的澳洲产品，澳大利亚联邦政府对北京贸易攻击的“关注”日益增加。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,7 +206,7 @@
   </div>
  </center>
  <p>
-  在A股市场中，是不允许国外的资金进行直接参与，该市场的资本市场是受到管制不能够实现自由流通的。中国香港股市市场是国际化金融中心，很多国外的资金可以在港股中进行投资，而中国在分别在2014年和2016年开通的沪港通和深港通开通了A股市场和港股市场中的资金互流，因为大陆在香港的北面，就形成了北上资金的说法。
+  上个月，中共外交官员在推特上发布了一张被篡改的图片，上面是一个澳大利亚士兵拿着血淋淋的刀子架在阿富汗儿童的喉咙上。澳大利亚总理斯科特・莫里森（Scott Morrison）抨击该图片“令人反感”和“令人发指”，并要求中国官方道歉。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -251,7 +238,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -283,13 +270,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949153.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949153.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/949153.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/13/949153.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955192.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955192.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/955192.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/09/955192.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/949153.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/955192.md' width='0px' height='0px'/>
